@startuml
title SO DO LOP 3 TANG - XAC NHAN KHOAN TIEN COC

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHXacNhanKhoanTienCoc #BFE8BA {
    - txtTimKiemPhieu: TextBox
    - grvPhieuChoDoiChieu: GridView
    - lblSoPhieuChoDoiChieu: Label
    - lblMaPhieuCoc: Label
    - lblTrangThai: Label
    - lblHoTenKhachHang: Label
    - lblSoDienThoai: Label
    - lblPhong: Label
    - lblHinhThucThue: Label
    - lblSoGiuongThue: Label
    - lblTongTien: Label
    - lblPhuongThucThanhToan: Label
    - lblNhanVienSale: Label
    - grvGiuongSeKhoa: GridView
    - pnlChungTu: Panel
    - imgChungTu: Image
    - lnkMoChungTuPDF: Link
    - txtLyDoYeuCauBoSung: TextArea
    - btnXacNhan: Button
    - btnYeuCauBoSung: Button
    - dlgXemChungTu: Dialog
    - dlgXacNhanHopLe: AlertDialog
    - dlgYeuCauBoSung: AlertDialog
    --
    + hienThiDanhSachPhieuChoDoiChieu(tuKhoa: String)
    + chonPhieuCoc(maPhieuCoc: String)
    + xemChungTu()
    + moHopThoaiXacNhanHopLe()
    + xacNhanHopLe()
    + moHopThoaiYeuCauBoSung()
    + yeuCauBoSung(lyDo: String)
  }
}

package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class XacNhanKhoanTienCoc #F4E3A2 {
    + LayDanhSachChoDoiChieu(text: String, maNV: String): IReadOnlyList<PhieuCoc>
    + LayChiTiet(maPhieuCoc: String, maNV: String): PhieuCoc
    + XacNhanHopLe(maPhieuCoc: String, maNhanVienQuanLy: String): KetQuaXacNhanKhoanTienCoc
    + YeuCauBoSung(maPhieuCoc: String, lyDo: String, maNV: String): PhieuCoc
  }

  class NhanVien #F4E3A2 {
    - MaNV: String
    - MaCN: String
    --
    + DocPhamVi(maNV: String): NhanVien
  }

  class PhieuCoc #F4E3A2 {
    - MaPhieuCoc: String
    - MaCN: String
    - MaKH: String
    - MaPhong: String
    - MaNV: String
    - HinhThucThue: String
    - SoGiuongThue: Integer
    - TongTien: Decimal
    - AnhMinhChung: String
    - PhuongThucThanhToan: String
    - LyDoYeuCauBoSung: String
    - HanThanhToan: DateTime
    - TrangThai: String
    - Giuongs: List<Giuong>
    - KhachHang: KhachHang
    - Phong: Phong
    --
    + LayDanhSachChoDoiChieu(maCN: String, text: String): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: String, maCN: String): PhieuCoc
    + DocChiTietChoCapNhat(maPhieuCoc: String, maCN: String): PhieuCoc
    + KiemTraCoTheXacNhanThanhToan()
    + XacNhanThanhToan()
    + YeuCauBoSung(lyDo: String, thoiDiemYeuCau: DateTime, thoiHanThanhToan: TimeSpan)
    + CapNhatXacNhanThanhToan()
    + CapNhatYeuCauBoSung()
  }

  class PhieuThu #F4E3A2 {
    - MaPT: String
    - SoTienThu: Decimal
    - ThoiGian: DateTime
    - PhuongThucThanhToan: String
    - AnhMinhChung: String
    - MaPhieuCoc: String
    - MaNV: String
    --
    + TaoChoTienCoc(phieuCoc: PhieuCoc, maNhanVien: String, thoiGian: DateTime): PhieuThu
    + Them()
  }

  class KhachHang #F4E3A2 {
    - MaKH: String
    - HoTen: String
    - SDT: String
  }

  class Phong #F4E3A2 {
    - MaPhong: String
    - SoPhong: String
    - ToaNha: String
    - TrangThai: String
    - Giuongs: List<Giuong>
    --
    + DocChiTiet(maPhong: String): Phong
    + XacNhanDatCoc(maGiuongs: IEnumerable<String>)
    + CapNhatDatCoc()
  }

  class Giuong #F4E3A2 {
    - MaGiuong: String
    - MaPhong: String
    - TrangThai: String
    --
    + XacNhanDaCoc(maPhong: String)
  }
}

package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class NhanVienDB #BFDCF0 {
    + DocChiTiet(maNV: String): NhanVien
  }
  class PhieuCocDB #BFDCF0 {
    + LayDanhSachChoDoiChieu(maCN: String, text: String): IReadOnlyList<PhieuCoc>
    + DocChiTiet(maPhieuCoc: String, maCN: String): PhieuCoc
    + DocChiTietChoCapNhat(maPhieuCoc: String, maCN: String): PhieuCoc
    + CapNhatXacNhanThanhToan(phieu: PhieuCoc)
    + CapNhatYeuCauBoSung(phieu: PhieuCoc)
  }
  class PhieuThuDB #BFDCF0 {
    + Them(phieuThu: PhieuThu)
  }
  class PhongDB #BFDCF0 {
    + DocChiTiet(maPhong: String): Phong
    + CapNhatDatCoc(phong: Phong)
  }
}

MHXacNhanKhoanTienCoc o-- XacNhanKhoanTienCoc
XacNhanKhoanTienCoc o-- PhieuCoc
XacNhanKhoanTienCoc o-- PhieuThu
XacNhanKhoanTienCoc o-- Phong
XacNhanKhoanTienCoc o-- NhanVien
NhanVien o-- NhanVienDB
PhieuCoc o-- PhieuCocDB
PhieuThu o-- PhieuThuDB
Phong o-- PhongDB
Phong "1" -- "1..*" Giuong : quan ly
PhieuCoc "1" -- "1..*" Giuong : dat coc
PhieuCoc "0..*" -- "1" KhachHang : dai dien
PhieuCoc "0..*" -- "1" Phong : dat


GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
XacNhanKhoanTienCoc -[hidden]down- PhieuCocDB
NhanVienDB -[hidden]right- PhieuCocDB
Giuong -[hidden]down- PhieuCocDB
@enduml
